perbaikan css pada bg video

--- a/style.css
+++ b/style.css
@@ -77,18 +77,15 @@ canvas {
 
 #bg-video {
  position: fixed;
-  top: 75%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -1;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
-  opacity: 0.5; /* Atur agar konten tetap terbaca */
-  filter: blur(2px) brightness(0.6); /* Tambahan efek visual */
+  z-index: -1;
+  filter: blur(2px) brightness(0.6);
 }
+
 #overlay {
   position: fixed;
   top: 0;
