--- a/style.css
+++ b/style.css
@@ -118,6 +118,17 @@ footer {
   canvas {
     height: 50px;
   }
+  #bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  opacity: 0.9;
+  filter: blur(2px) brightness(0.6);
+  }
 }
 
 
