--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: #121212;
+  background: #12121238;
   font-family: 'Segoe UI', sans-serif;
   color: white;
   display: flex;
@@ -20,7 +20,7 @@ body {
   background: rgba(30, 30, 30, 0.295);
   padding: 20px;
   border-radius: 15px;
-  box-shadow: 0 0 20px #1db954;
+  box-shadow: 0 0 20px #a6d3b7;
   width: 100%;
   max-width: 350px;
   margin: auto;
@@ -41,13 +41,13 @@ body {
   font-size: 1.1em;
   border: none;
   border-radius: 50%;
-  background: #1db954;
-  color: white;
+  background: #d8e7dd4b;
+  color: rgb(74, 137, 219);
   cursor: pointer;
 }
 
 .controls button:hover {
-  background: #1ed760;
+  background: #f0f0f1;
 }
 
 #playlist {
@@ -63,7 +63,7 @@ body {
 
 #playlist li:hover,
 #playlist li.active {
-  background: #1db954;
+  background: #e5ebe781;
   border-radius: 5px;
 }
 
@@ -71,7 +71,7 @@ canvas {
   width: 100%;
   height: 60px;
   margin-top: 15px;
-  background: #222;
+  background: #22222200;
   border-radius: 5px;
 }
 
@@ -127,5 +127,4 @@ footer {
   z-index: -1;
   }
 }
-
 
